Fix vertical alignment of button on compact upsell nudges

--- a/client/blocks/upsell-nudge/style.scss
+++ b/client/blocks/upsell-nudge/style.scss
@@ -27,6 +27,10 @@
 		color: var( --color-text-inverted );
 		padding: 0 0 0 8px;
 	}
+	.banner__action {
+		position: relative;
+		top: 1px;
+	}
 	.banner__description {
 		color: var( --color-neutral-5 );
 	}
@@ -55,7 +59,8 @@
 	}
 }
 
-.upsell-nudge.is-dismissible.is-horizontal.is-compact .banner__action {
+.upsell-nudge.is-dismissible.is-compact .banner__action {
+	margin-top: 0;
 	margin-right: 28px;
 }
 .upsell-nudge.banner.card.is-compact.is-card-link {
